--- a/templates/report_list.html
+++ b/templates/report_list.html
@@ -1,6 +1,6 @@
 <h3>Custom SQL Report List</h3>
 {% if reports is empty %}
-<p>There are currently no defined SQL reports for this project.</p>
+<p>There are currently <strong>no defined SQL reports</strong> for this project.</p>
 {% else %}
 <ul> 
     {% for report in reports %}
