Moved generic NotFoundController to the framework.

--- a/templates/not_found.html
+++ b/templates/not_found.html
@@ -1,10 +1,7 @@
-<link rel="stylesheet" type="text/css" href="lib/bootstrap/{{ versions.bootstrap }}/css/bootstrap.css">
-<h3>
-	<span class="text-danger glyphicon glyphicon-exclamation-sign"></span> Action Not Found
-</h3>
+<h3>Action Not Found</h3>
 <p>
 The action you have requested is not a valid action.
 </p>
 <p>
-    <a class="btn btn-default" style="color:black;" href="?action=list&pid={{ PID }}">&lsaquo; Back to Report List</a>
+    <a href="?action=list&pid={{ PID }}">&lsaquo; Back to Report List</a>
 </p>
