Cleaned up template files.

--- a/templates/not_found.html
+++ b/templates/not_found.html
@@ -1,7 +1,3 @@
 <h3>Action Not Found</h3>
-<p>
-The action you have requested is not a valid action.
-</p>
-<p>
-    <a href="?action=list&pid={{ PID }}">&lsaquo; Back to Report List</a>
-</p>
+<p>The action you have requested is not a valid action.</p>
+<p><a href="?action=list&pid={{ PID }}">&lsaquo; Back to Report List</a></p>
